--- a/node_bu/public/icebergs.html
+++ b/node_bu/public/icebergs.html
@@ -2,102 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="images/icons/favicon.svg">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <link href="images/icons/favicon.svg" rel="shortcut icon">
 
-    <title>Switchers.ai | Settings</title>
+    <title>Switchers.ai | Icebergs</title>
 
-    <meta property="og:title" content="Switchers.ai | Settings">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg">
+    <meta property="og:title" content="Switchers.ai | Icebergs"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          rel="stylesheet" type="text/css">
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          rel="stylesheet" type="text/css">
-    <link crossorigin="anonymous" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
-          rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/main_view.css">
-    <!--    <link rel="stylesheet" href="css/settings.css">-->
+    <link rel="stylesheet" href="css/outliers.css">
 </head>
+
 <body class="body-background-dark">
-<style>
-    .navbar-brand img {
-        height: 40px;
-        width: auto;
-    }
-
-    /* Style for the floating button */
-    #save-settings {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    /* Optional: Add some responsiveness to ensure it doesn't overlap content */
-    @media (max-width: 600px) {
-        #floatingButton {
-            right: 10px;
-            bottom: 10px;
-            padding: 5px 10px;
-        }
-    }
-
-    /* Add some spacing */
-    .container-fluid {
-        padding-top: 20px;
-    }
-
-    .pt-2 {
-        padding-top: 20px;
-    }
-
-    .mt-3 {
-        margin-top: 15px;
-    }
-
-    .mb-2 {
-        margin-bottom: 10px;
-    }
-
-    h2 {
-        margin-bottom: 20px;
-        font-size: 24px;
-        font-weight: bold;
-    }
-
-    /* Adjust position of save button */
-    @media (max-width: 768px) {
-        #save-settings {
-            width: 100%;
-            text-align: center;
-            border-radius: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-    }
-
-    /* Flex container for the select and button */
-    .select-container {
-        display: flex;
-        align-items: center;
-    }
-
-    .select-container select {
-        flex: 1;
-        margin-right: 10px;
-    }
-</style>
 
 <div>
     <!-- NAVBAR -->
@@ -109,7 +33,7 @@
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
-                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="settings-nav-btn"
+                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn"
                         data-target="settings.html"
                         data-toggle="tooltip"
                         data-placement="bottom" title="settings">
@@ -135,7 +59,7 @@
                     <i class="bi bi-clipboard-data"></i>
                     Impacts
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="icebergs-nav-btn"
                         data-target="icebergs.html"
                         data-toggle="tooltip" data-placement="bottom" title="icebergs">
                     <i class="bi bi-exclamation-triangle text-danger"></i>
@@ -166,18 +90,41 @@
         <main>
             <div class="pt-2">
                 <div class="row mt-3 mb-2">
-                    <h2>Set point of view:</h2>
-
                     <div class="col-md-3 mb-2 col-sm-12 mb-1">
-                        <select id="pov-choice" class="form-select" aria-label="Default select example">
-                            <option disabled selected>Select a candidate to inspect</option>
-                        </select>
-                        <!-- Floating button at the bottom -->
+                        <div class="scrollable-container">
+                            <div class="list-group" id="questions-list">
+                                <!-- Clickable list items will be appended here dynamically -->
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
-                        <button id="save-settings">Save</button>
+
+                    <div class="col-md-9 mb-2 col-sm-12 mb-1">
+                        <div class="card">
+                            <div class="card bg-dark d-flex justify-content-center">
+                                <div class="row p-2 align-items-center">
+                                    <div class="col-4">
+                                        <h3 class="text-white">Icebergs Data</h3>
+                                    </div>
+                                    <div class="col-8 d-flex justify-content-end">
+                                        <!-- Use flexbox to space out buttons -->
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
+                                                data-level="high" value="high">High
+                                        </button>
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
+                                                data-level="medium">Medium
+                                        </button>
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
+                                                data-level="low">Low
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mt-2">
+                            <div class="chart-container" style="position: relative;">
+                                <canvas id="icebergs-chart"></canvas>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -210,11 +157,11 @@
 <script crossorigin="anonymous" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"
-        type="text/javascript"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/template.js"></script>
-<script src="js/settings.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+<script src="js/template.js" type="text/javascript"></script>
+<script src="js/icebergs.js" type="text/javascript"></script>
 </body>
 </html>
