--- a/node_bu/public/outliers.html
+++ b/node_bu/public/outliers.html
@@ -59,6 +59,12 @@
                     <i class="bi bi-clipboard-data"></i>
                     Impacts
                 </button>
+                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                        data-target="icebergs.html"
+                        data-toggle="tooltip" data-placement="bottom" title="icebergs">
+                    <i class="bi bi-exclamation-triangle text-danger"></i>
+                    Icebergs
+                </button>
             </div>
         </div>
 
@@ -89,29 +95,6 @@
                             <div class="list-group" id="questions-list">
                                 <!-- Clickable list items will be appended here dynamically -->
                             </div>
-                            <!--                            <div class="accordion" id="accordionExample">-->
-                            <!--                                <div class="accordion-item">-->
-                            <!--                                    <h2 class="accordion-header" id="headingOne">-->
-                            <!--                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"-->
-                            <!--                                                data-bs-target="#collapseOne" aria-expanded="true"-->
-                            <!--                                                aria-controls="collapseOne">-->
-                            <!--                                            Accordion Item #1-->
-                            <!--                                        </button>-->
-                            <!--                                    </h2>-->
-                            <!--                                    <div id="collapseOne" class="accordion-collapse collapse show"-->
-                            <!--                                         aria-labelledby="headingOne" data-bs-parent="#accordionExample">-->
-                            <!--                                        <div class="accordion-body">-->
-                            <!--                                            <strong>This is the first item's accordion body.</strong> It is shown by-->
-                            <!--                                            default, until the collapse plugin adds the appropriate classes that we use-->
-                            <!--                                            to style each element. These classes control the overall appearance, as well-->
-                            <!--                                            as the showing and hiding via CSS transitions. You can modify any of this-->
-                            <!--                                            with custom CSS or overriding our default variables. It's also worth noting-->
-                            <!--                                            that just about any HTML can go within the <code>.accordion-body</code>,-->
-                            <!--                                            though the transition does limit overflow.-->
-                            <!--                                        </div>-->
-                            <!--                                    </div>-->
-                            <!--                                </div>-->
-                            <!--                            </div>-->
                         </div>
                     </div>
 
