--- a/node_bu/public/questions.html
+++ b/node_bu/public/questions.html
@@ -67,6 +67,12 @@
                     <i class="bi bi-clipboard-data"></i>
                     Impacts
                 </button>
+                <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
+                        data-target="icebergs.html"
+                        data-toggle="tooltip" data-placement="bottom" title="icebergs">
+                    <i class="bi bi-exclamation-triangle text-danger"></i>
+                    Icebergs
+                </button>
             </div>
         </div>
 
